Add platform images

--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -530,17 +530,17 @@
                                                 </thead>
                                                 <tbody>
                                                 <tr>
-                                                    <td>Windows</td>
+                                                    <td><i class="fab fa-windows"></i> Windows</td>
                                                     <td data-sort="{{ .Player.PlayTimeWindows }}">{{ .Player.GetPlaytimeShort "windows" 2 }}</td>
                                                     <td><small>{{ .Player.GetPlaytimePercent "windows" }}%</small></td>
                                                 </tr>
                                                 <tr>
-                                                    <td>Mac</td>
+                                                    <td><i class="fab fa-apple"></i> Mac</td>
                                                     <td data-sort="{{ .Player.PlayTimeMac }}">{{ .Player.GetPlaytimeShort "mac" 2 }}</td>
                                                     <td><small>{{ .Player.GetPlaytimePercent "mac" }}%</small></td>
                                                 </tr>
                                                 <tr>
-                                                    <td>Linux</td>
+                                                    <td><i class="fab fa-linux"></i> Linux</td>
                                                     <td data-sort="{{ .Player.PlayTimeLinux }}">{{ .Player.GetPlaytimeShort "linux" 2 }}</td>
                                                     <td><small>{{ .Player.GetPlaytimePercent "linux" }}%</small></td>
                                                 </tr>
