--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -532,17 +532,17 @@
                                                 <tr>
                                                     <td><i class="fab fa-windows"></i> Windows</td>
                                                     <td data-sort="{{ .Player.PlayTimeWindows }}">{{ .Player.GetPlaytimeShort "windows" 2 }}</td>
-                                                    <td><small>{{ .Player.GetPlaytimePercent "windows" }}%</small></td>
+                                                    <td><small>{{ .Player.GetPlaytimePercent "windows" }}</small></td>
                                                 </tr>
                                                 <tr>
                                                     <td><i class="fab fa-apple"></i> Mac</td>
                                                     <td data-sort="{{ .Player.PlayTimeMac }}">{{ .Player.GetPlaytimeShort "mac" 2 }}</td>
-                                                    <td><small>{{ .Player.GetPlaytimePercent "mac" }}%</small></td>
+                                                    <td><small>{{ .Player.GetPlaytimePercent "mac" }}</small></td>
                                                 </tr>
                                                 <tr>
                                                     <td><i class="fab fa-linux"></i> Linux</td>
                                                     <td data-sort="{{ .Player.PlayTimeLinux }}">{{ .Player.GetPlaytimeShort "linux" 2 }}</td>
-                                                    <td><small>{{ .Player.GetPlaytimePercent "linux" }}%</small></td>
+                                                    <td><small>{{ .Player.GetPlaytimePercent "linux" }}</small></td>
                                                 </tr>
                                                 </tbody>
                                             </table>
