Update player tabs

--- a/cmd/webserver/assets/sass/_global.scss
+++ b/cmd/webserver/assets/sass/_global.scss
@@ -336,7 +336,7 @@ video {
 
 .nav-tabs {
     li.nav-item {
-        .nav-link.nav-link-small {
+        .nav-link {
             padding: .5rem .5rem
         }
     }
