--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -36,38 +36,29 @@
 
                 <ul class="nav nav-tabs card-header-tabs nav-fill-mobile">
                     <li class="nav-item">
-                        <a class="nav-link" data-toggle="tab" href="#details" role="tab">Details</a>
+                        <a class="nav-link active" data-toggle="tab" href="#details" role="tab">Details</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" data-toggle="tab" href="#games" role="tab">Library</a>
+                        <a class="nav-link" data-toggle="tab" href="#games" role="tab">Library ({{ comma .Player.GamesCount }})</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" data-toggle="tab" href="#stats" role="tab">Library Stats</a>
                     </li>
-                    {{if gt .Player.WishlistAppsCount 0}}
-                        <li class="nav-item">
-                            <a class="nav-link" data-toggle="tab" href="#wishlist" role="tab">Wishlist</a>
-                        </li>
-                    {{ end }}
-                    {{/*                    <li class="nav-item">*/}}
-                    {{/*                        <a class="nav-link" data-toggle="tab" href="#achievement-stats" role="tab">Completion</a>*/}}
-                    {{/*                    </li>*/}}
                     <li class="nav-item">
-                        <a class="nav-link" data-toggle="tab" href="#achievements" role="tab">Achievements</a>
+                        <a class="nav-link" data-toggle="tab" href="#wishlist" role="tab">Wishlist ({{ comma .Player.WishlistAppsCount }})</a>
                     </li>
-                    {{if gt .Player.FriendsCount 0}}
-                        <li class="nav-item">
-                            <a class="nav-link" data-toggle="tab" href="#friends" role="tab">Friends</a>
-                        </li>
-                    {{ end }}
                     <li class="nav-item">
-                        <a class="nav-link" data-toggle="tab" href="#badges" role="tab">Badges</a>
+                        <a class="nav-link" data-toggle="tab" href="#achievements" role="tab">Achievements ({{ comma .Player.AchievementCount }})</a>
                     </li>
-                    {{if gt .Player.GroupsCount 0}}
-                        <li class="nav-item">
-                            <a class="nav-link" data-toggle="tab" href="#groups" role="tab">Groups</a>
-                        </li>
-                    {{ end }}
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="tab" href="#friends" role="tab">Friends ({{ comma .Player.FriendsCount }})</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="tab" href="#badges" role="tab">Badges ({{ comma .Player.BadgesCount }})</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="tab" href="#groups" role="tab">Groups ({{ comma .Player.GroupsCount }})</a>
+                    </li>
                 </ul>
 
             </div>
