--- a/cmd/webserver/templates/groups.gohtml
+++ b/cmd/webserver/templates/groups.gohtml
@@ -41,7 +41,7 @@
                     </div>
                     <div class="col-sm-6 col-md-4">
                         <div class="form-group">
-                            <label for="filter">Filter Removed</label>
+                            <label for="filter">Filter</label>
                             <select class="form-control form-control-chosen" id="filter" name="filter">
                                 <option value="">All Groups</option>
                                 <option value="1" selected>Active Groups</option>
