--- a/cmd/webserver/templates/_header.gohtml
+++ b/cmd/webserver/templates/_header.gohtml
@@ -239,7 +239,7 @@
                     </li>
 
                     {{ if .IsAdmin }}
-                        <li class="nav-item {{if startsWith .Path "/donate" }}active{{end}}">
+                        <li class="nav-item {{if startsWith .Path "/admin" }}active{{end}}">
                             <a class="nav-link" href="/admin">Admin</a>
                         </li>
                     {{ end }}
